# gitnr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Taskfile.yaml  readme.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh  version.sh
src/: cli.rs  main.rs  tests.rs
src/commands/: completions.rs  create.rs  mod.rs
src/commands/search/: handlers.rs  mod.rs
src/commands/search/framework/: event.rs  mod.rs  tui.rs
src/commands/search/state/: collection.rs  mod.rs  view_preview.rs
src/commands/search/views/: mod.rs  util.rs
src/commands/search/views/home/: footer.rs  header.rs  main_list.rs  main_side.rs  mod.rs
src/commands/search/views/preview/: footer.rs  mod.rs
src/template/: list.rs  mod.rs
src/template/collection/: github.rs  mod.rs  toptal.rs
src/template/item/: cache.rs  mod.rs
src/util/: fs.rs  http.rs  mod.rs  package.rs  string.rs
