[package]
name = "gitnr"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Tarun Ramesh <reemus.dev>"]
homepage = "https://github.com/reemus-dev/gitnr"
repository = "https://github.com/reemus-dev/gitnr"
description = "A CLI to generate '.gitignore' files using one or more templates"
include = ["src/**/*", "CHANGELOG.md", "LICENSE", "readme.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
clap = { version = "4.3.23", features = ["derive"] }
copypasta = "0.8.2"
crossterm = "0.27.0"
dirs = "5.0.1"
human-panic = "1.1.5"
indoc = "2.0.3"
native-tls = { version = "0.2.11", features = [] }
once_cell = "1.18.0"
ratatui = { version = "0.22.0", features = ["default"] }
serde = { version = "1.0.183", features = ["default", "derive"] }
serde_json = "1.0.105"
tui-input = "0.8.0"
ureq = { version = "2.7.1", features = ["gzip", "native-tls"], default-features = false }
url = "2.4.0"
yansi = "1.0.0-rc.1"

[profile.release]
lto = true
strip = true
opt-level = "z"

# [package.metadata.cross.build.env]
# passthrough = [
#     "CARGO_TERM_COLOR",
#     # "PKG_CONFIG_PATH",
#     "OPENSSL_DIR",
# ]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]