[package]
name = "gitnr"
version = "0.2.2"
edition = "2021"
license = "MIT"
readme = "readme.md"
authors = ["Tarun Ramesh <reemus.dev>"]
homepage = "https://github.com/reemus-dev/gitnr"
repository = "https://github.com/reemus-dev/gitnr"
description = "A CLI to generate '.gitignore' files using one or more templates"
include = ["src/**/*", "LICENSE", "readme.md"]
keywords = ["git", "gitignore", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
copypasta = "0.8.2"
dirs = "5.0.1"
human-panic = "2.0.2"
indoc = "2.0.5"
native-tls = { version = "0.2.12", features = [] }
once_cell = "1.20.2"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["default", "derive"] }
serde_json = "1.0.128"
tui-input = "0.10.1"
ureq = { version = "2.10.1", features = ["gzip", "native-tls"], default-features = false }
url = "2.5.2"
yansi = "1.0.1"

[profile.release]
lto = true
strip = true
opt-level = "z"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ name }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-linux-amd64"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-win-amd64.exe"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-amd64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-macos-arm64"

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]
[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install pkg-config libssl-dev:$CROSS_DEB_ARCH"
]
